--- a/main.css
+++ b/main.css
@@ -77,3 +77,17 @@ ul li.check {
 ul li.check::before {
     background-color: green;
 }
+ul li span {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: black;
+    line-height: 40px;
+    text-align: center;
+}
+ul li span:hover {
+    background-color: darkgray;
+}
